--- a/OneDance/Info.plist
+++ b/OneDance/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please allow us to use your photo library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow us to use your camera</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDocumentTypes</key>
@@ -34,7 +38,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>OneDance wants to use your location when the app is in use?</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>OneDance wants to use your location when the app is in use?</string>
 </dict>
 </plist>
